@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.4959
+//     Runtime Version:2.0.50727.5444
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -129,6 +129,46 @@ namespace MySql.Data.Entity.Tests.Properties {
         internal static string BigCountSimple {
             get {
                 return ResourceManager.GetString("BigCountSimple", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to SELECT
+        ///1 AS C1, 
+        ///GroupBy1.K1 AS Name, 
+        ///GroupBy1.A1 AS C2
+        ///FROM (SELECT
+        ///Extent1.Name AS K1, 
+        ///Extent1.DateBegan AS K2, 
+        ///Extent1.NumEmployees AS K3, 
+        ///COUNT(1) AS A1
+        ///FROM Companies AS Extent1
+        /// GROUP BY 
+        ///Extent1.Name, 
+        ///Extent1.DateBegan, 
+        ///Extent1.NumEmployees) AS GroupBy1.
+        /// </summary>
+        internal static string CanGroupByMultipleColumns {
+            get {
+                return ResourceManager.GetString("CanGroupByMultipleColumns", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to SELECT
+        ///1 AS C1, 
+        ///GroupBy1.K1 AS Name, 
+        ///GroupBy1.A1 AS C2
+        ///FROM (SELECT
+        ///Extent1.Name AS K1, 
+        ///COUNT(1) AS A1
+        ///FROM Companies AS Extent1
+        /// GROUP BY 
+        ///Extent1.Name) AS GroupBy1.
+        /// </summary>
+        internal static string CanGroupBySingleColumn {
+            get {
+                return ResourceManager.GetString("CanGroupBySingleColumn", resourceCulture);
             }
         }
         
