@@ -159,6 +159,34 @@ FROM (SELECT
 Count(Extent1.Id) AS A1
 FROM Toys AS Extent1) AS GroupBy1</value>
   </data>
+  <data name="CanGroupByMultipleColumns" xml:space="preserve">
+    <value>SELECT
+1 AS C1, 
+GroupBy1.K1 AS Name, 
+GroupBy1.A1 AS C2
+FROM (SELECT
+Extent1.Name AS K1, 
+Extent1.DateBegan AS K2, 
+Extent1.NumEmployees AS K3, 
+COUNT(1) AS A1
+FROM Companies AS Extent1
+ GROUP BY 
+Extent1.Name, 
+Extent1.DateBegan, 
+Extent1.NumEmployees) AS GroupBy1</value>
+  </data>
+  <data name="CanGroupBySingleColumn" xml:space="preserve">
+    <value>SELECT
+1 AS C1, 
+GroupBy1.K1 AS Name, 
+GroupBy1.A1 AS C2
+FROM (SELECT
+Extent1.Name AS K1, 
+COUNT(1) AS A1
+FROM Companies AS Extent1
+ GROUP BY 
+Extent1.Name) AS GroupBy1</value>
+  </data>
   <data name="CountSimple" xml:space="preserve">
     <value>SELECT
 GroupBy1.A1 AS C1
