@@ -49,6 +49,7 @@
 - Modified Connection.Open() to not reuse existing driver instance when that instance is closed. Also made Connection.Abort() 
   always close the current driver, even if the connection is pooled. (MySQL bug #58316, Oracle bug #12613102).
 - Added Visual Studio DDEX support for Compact Framework projects (MySQL bug #54607, Oracle bug #12605152).
+- Fixed Entity Framework provider GROUP BY clause generation by adding all group by keys to the SELECT statement (MySQL bug #46742, Oracle bug #12622129).
 
 Version 6.1.5
 - Fix authorization popup after modifying stored procedure in VS (Bug #44715)
